# mood-lighting

./: .gitignore  CLAUDE.md  README.md  README_DEVELOPMENT.md  project_secrets.py.example  pymakr.conf  pyproject.toml  test_lifx_api.py  test_lifx_api_python.py  test_lifx_fun.py
.claude/commands/: plan.md
arduino/esp32_lifx_button/: README.md  esp32_lifx_button.ino  secrets.h.example
docs/: memory_bank.md
docs/architecture/: design-decisions.md
docs/development/: dependency-management.md  python-project-structure.md  security-best-practices.md  testing-patterns.md
docs/hardware/: component_selection.md  wiring_diagram.md
docs/platform-comparison/: micropython-vs-arduino.md  ssl-troubleshooting.md
docs/software/: development_environment_setup.md  development_workflow_guide.md  lifx_api_integration.md  wifi_manager_plan.md
src/: main.py
src/hardware/: __init__.py
src/lighting/: __init__.py  lifx_api.py
src/network/: __init__.py
tests/: conftest.py  test_main.py
tests/integration/: __init__.py  test_lifx_scenarios.py
tests/test_lighting/: __init__.py  test_lifx_api.py  test_lifx_api_micropython.py  test_lifx_api_simple.py
